# phlex

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  codecov.yml  phlex.code-workspace  pyproject.toml
.devcontainer/: codespace.code-workspace  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: add-issues.yaml  clang-tidy-check.yaml  clang-tidy-fix.yaml  cmake-build.yaml  codeql-analysis.yaml  codeql-comment.yaml  coverage.yaml  dependabot-auto-merge.yaml  header-guards-check.yaml  header-guards-fix.yaml  markdown-check.yaml  python-check.yaml
.kiro/rules/: guidelines.md
Modules/private/: CreateClangTidyTargets.cmake  (+1 more)
ci/: Dockerfile  entrypoint.sh  packages.yaml  spack.yaml  upgrade_repos.py
form/: form_module.cpp
form/core/: token.hpp  (+1 more)
form/root_storage/: .clang-tidy  CMakeLists.txt  demangle_name.cpp  root_storage.hpp  root_tbranch_container.hpp  root_tbranch_read_container.cpp  root_tbranch_read_container.hpp  root_tbranch_write_container.cpp  root_tbranch_write_container.hpp  root_tfile.hpp  root_ttree_container.hpp  root_ttree_write_container.cpp  root_ttree_write_container.hpp
form/storage/: CMakeLists.txt  istorage.hpp  storage.hpp  storage_association.hpp  storage_associative_container.hpp  storage_associative_write_container.cpp  storage_associative_write_container.hpp  storage_container.hpp  storage_file.hpp  storage_read_container.cpp  storage_read_container.hpp  storage_reader.cpp  storage_write_association.cpp  storage_write_association.hpp
phlex/: CMakeLists.txt  configuration.cpp  driver.hpp
phlex/app/: load_module.cpp
phlex/core/: CMakeLists.txt  bound_function.hpp  consumer.cpp  consumer.hpp  declared_fold.hpp  declared_observer.cpp  declared_observer.hpp  declared_output.cpp  declared_output.hpp  declared_predicate.cpp  declared_predicate.hpp  declared_provider.cpp  declared_provider.hpp  declared_transform.cpp  declared_transform.hpp  declared_unfold.cpp  declared_unfold.hpp  double_bound_function.hpp  edge_creation_policy.cpp  edge_creation_policy.hpp  edge_maker.cpp  edge_maker.hpp  filter.cpp  framework_graph.cpp  framework_graph.hpp  fwd.hpp  glue.hpp  graph_proxy.hpp  index_router.cpp  index_router.hpp  message.cpp  message.hpp  message_sender.cpp  message_sender.hpp  multilayer_join_node.hpp  multilayer_join_usage.dot  multiplexer.cpp  node_catalog.cpp  node_catalog.hpp  product_query.cpp  (+11 more)
phlex/core/detail/: filter_impl.cpp  repeater_node.cpp  repeater_node.hpp
phlex/metaprogramming/: delegate.hpp  type_deduction.hpp
phlex/metaprogramming/detail/: ctor_reflect_types.hpp
phlex/model/: CMakeLists.txt  algorithm_name.hpp  child_tracker.cpp  child_tracker.hpp  data_cell_counter.hpp  data_cell_index.cpp  data_cell_index.hpp  data_cell_tracker.cpp  data_cell_tracker.hpp  data_layer_hierarchy.hpp  fixed_hierarchy.cpp  fixed_hierarchy.hpp  flush_gate.hpp  fwd.hpp  handle.hpp  identifier.cpp  identifier.hpp  product_matcher.cpp  product_specification.hpp  product_store.cpp  product_store.hpp  products.cpp  products.hpp  qualified_name.hpp  type_id.hpp
phlex/utilities/: async_driver.hpp  resource_usage.cpp  resource_usage.hpp  simple_ptr_map.hpp  string_literal.hpp  thread_counter.hpp
plugins/: CMakeLists.txt  layer_generator.cpp  layer_generator.hpp
plugins/python/: CMakeLists.txt  README.md
plugins/python/python/phlex/: __init__.py
plugins/python/src/: .clang-tidy  configwrap.cpp  dciwrap.cpp  lifelinewrap.cpp  modulewrap.cpp  wrap.hpp
scripts/: QUICK_REFERENCE.md  README.md  check_codeql_alerts.py  clang_tidy_check_summary.py  clang_tidy_diff_issues.py  clang_tidy_fixes_to_problems.py  codeql_reset_dismissed_alerts.py  create_coverage_symlinks.py  fix_header_guards.py  git-ai-commit  normalize_coverage_lcov.py  sarif-alerts.py
scripts/test/: CMakeLists.txt  __init__.py  conftest.py  test_check_codeql_alerts.py  test_clang_tidy_check_summary.py  test_clang_tidy_diff_issues.py  test_clang_tidy_fixes_to_problems.py  test_codeql_reset_dismissed_alerts.py  test_coverage_scripts.py  test_fix_header_guards.py  test_git_ai_commit.py  test_sarif_alerts.py
test/: CMakeLists.txt  allowed_families.cpp  cached_execution.cpp  child_tracker_test.cpp  class_registration.cpp  configuration.cpp  data_cell_tracker_test.cpp  different_hierarchies.cpp  filter.cpp  filter_impl.cpp  fold.cpp  fold_duplicate_layer_name_test.cpp  framework_graph.cpp  function_registration.cpp  hierarchical_nodes.cpp  identifier.cpp  multiple_function_registration.cpp  output_products.cpp  product_query.cpp  product_store.cpp  provider_test.cpp  repeater_node_test.cpp  type_distinction.cpp  type_id.cpp  unfold.cpp  vector_of_abstract_types.cpp  yielding_driver.cpp
test/benchmarks/: benchmark-04.jsonnet  benchmark-05.jsonnet  benchmark-06.jsonnet  benchmark-07.jsonnet  benchmark-08.jsonnet  benchmark-09.jsonnet  last_index.cpp  plus_101.cpp  plus_one.cpp  read_id.cpp  verify_difference.cpp
test/demo-giantdata/: unfold_transform_fold.cpp
test/form/: CMakeLists.txt  form_basics_test.cpp  form_root_schema_read_test.cpp  form_root_schema_write_test.cpp  form_storage_test.cpp  reader.cpp  test_utils.hpp  toy_tracker.cpp  toy_tracker.hpp  writer.cpp
test/max-parallelism/: check_parallelism.cpp  provide_parallelism.cpp
test/memory-checks/: many_events.cpp
test/mock-workflow/: G4Stage1.libsonnet  G4Stage2.libsonnet  algorithm.hpp  event_product.libsonnet  id_provider.cpp
test/plugins/: ij_source.cpp  module.cpp  output.cpp
test/python/: .coveragerc  CMakeLists.txt  adder.py  check_sys_path.py  pybadbool.jsonnet  pybadint.jsonnet  pybaduint.jsonnet  pycallback3.jsonnet  pycoverage.jsonnet  pymismatch.jsonnet  pymismatch_annotations.jsonnet  pyraise.jsonnet  pytypes.jsonnet  pyveclists.jsonnet  pyvectypes.jsonnet  source.cpp  test_callbacks.py  test_coverage.py  test_mismatch.py  test_types.py  unit_test_annotations.py  variant.py  vectypes.py  verify.py  verify_extended.py
test/tbb-preview/: CMakeLists.txt  resource_limited_threads_test.cpp  resource_limiting_test.cpp
(+13 files in other folders)
