add_definitions("-UNDEBUG")

find_package(Catch2 REQUIRED)

# Suppress Catch2's use of __COUNTER__ (a compiler extension, not standard C++)
# by propagating CATCH_CONFIG_NO_COUNTER to all consumers of Catch2::Catch2,
# regardless of whether Catch2 was resolved via find_package or FetchContent.
target_compile_definitions(Catch2::Catch2 INTERFACE CATCH_CONFIG_NO_COUNTER)

include(CetTest)

cet_test_env(SPDLOG_LEVEL=debug)

cet_test(concepts SOURCE concepts.cpp LIBRARIES phlex::core_internal)
cet_test(
  adjust_config
  USE_CATCH2_MAIN
  SOURCE
  adjust_config.cpp
  LIBRARIES
  run_phlex_internal
  Boost::json
)
cet_test(config_test USE_CATCH2_MAIN SOURCE configuration.cpp LIBRARIES
         phlex::configuration
)
cet_test(string_literal SOURCE string_literal.cpp LIBRARIES phlex::utilities_internal)
cet_test(type_deduction SOURCE type_deduction.cpp LIBRARIES
         phlex::metaprogramming
)
cet_test(type_id USE_CATCH2_MAIN SOURCE type_id.cpp LIBRARIES phlex::model_internal fmt::fmt)
cet_test(identifier USE_CATCH2_MAIN SOURCE identifier.cpp LIBRARIES phlex::model phlex::configuration Boost::json)
cet_test(
  yielding_driver
  USE_CATCH2_MAIN
  SOURCE
  yielding_driver.cpp
  LIBRARIES
  phlex::core_internal
  TBB::tbb
)

cet_test(
  allowed_families
  USE_CATCH2_MAIN
  SOURCE
  allowed_families.cpp
  LIBRARIES
  phlex::core_internal
  Boost::json
  layer_generator_internal
)
cet_test(
  vector_of_abstract_types
  USE_CATCH2_MAIN
  SOURCE
  vector_of_abstract_types.cpp
  LIBRARIES
  phlex::core_internal
  layer_generator_internal
)
cet_test(
  cached_execution
  USE_CATCH2_MAIN
  SOURCE
  cached_execution.cpp
  LIBRARIES
  phlex::core_internal
  Boost::json
  layer_generator_internal
)
cet_test(
  class_registration
  USE_CATCH2_MAIN
  SOURCE
  class_registration.cpp
  LIBRARIES
  phlex::core_internal
  Boost::json
)

cet_test(
  different_hierarchies
  USE_CATCH2_MAIN
  SOURCE
  different_hierarchies.cpp
  LIBRARIES
  phlex::core_internal
  spdlog::spdlog
  layer_generator_internal
)
# Disable pending resolution of [Change fold-result caching to use
# `multilayer_join_node`](https://github.com/Framework-R-D/phlex/issues/359)
set_tests_properties(different_hierarchies PROPERTIES DISABLED TRUE)

cet_test(filter_impl USE_CATCH2_MAIN SOURCE filter_impl.cpp LIBRARIES
         phlex::core_internal
)
cet_test(
  filter
  USE_CATCH2_MAIN
  SOURCE
  filter.cpp
  LIBRARIES
  phlex::core_internal
  Boost::json
  layer_generator_internal
)
cet_test(
  framework_graph
  USE_CATCH2_MAIN
  SOURCE
  framework_graph.cpp
  LIBRARIES
  phlex::core_internal
  Boost::json
  layer_generator_internal
)
cet_test(
  function_registration
  USE_CATCH2_MAIN
  SOURCE
  function_registration.cpp
  LIBRARIES
  phlex::core_internal
  Boost::json
)
cet_test(
  hierarchical_nodes
  USE_CATCH2_MAIN
  SOURCE
  hierarchical_nodes.cpp
  LIBRARIES
  Boost::json
  TBB::tbb
  phlex::core_internal
  spdlog::spdlog
  layer_generator_internal
)
cet_test(
  layer_generator_test
  USE_CATCH2_MAIN
  SOURCE
  layer_generator.cpp
  LIBRARIES
  phlex::core_internal
  layer_generator_internal
)
cet_test(
  multiple_function_registration
  USE_CATCH2_MAIN
  SOURCE
  multiple_function_registration.cpp
  LIBRARIES
  Boost::json
  phlex::core_internal
)
cet_test(
  output_products
  USE_CATCH2_MAIN
  SOURCE output_products.cpp
  LIBRARIES layer_generator_internal phlex::core_internal spdlog::spdlog
)
cet_test(
  data_cell_counting
  USE_CATCH2_MAIN
  SOURCE
  data_cell_counting.cpp
  LIBRARIES
  phlex::model_internal
  phlex::utilities_internal
)
cet_test(data_cell_index USE_CATCH2_MAIN SOURCE data_cell_index.cpp LIBRARIES
         phlex::model_internal
)
cet_test(fixed_hierarchy_test USE_CATCH2_MAIN SOURCE fixed_hierarchy_test.cpp LIBRARIES
         phlex::model
)
cet_test(data_cell_tracker USE_CATCH2_MAIN SOURCE data_cell_tracker_test.cpp LIBRARIES
         phlex::model
         TBB::tbb
)
cet_test(child_tracker USE_CATCH2_MAIN SOURCE child_tracker_test.cpp LIBRARIES
         phlex::model_internal
         TBB::tbb
)
cet_test(product_handle USE_CATCH2_MAIN SOURCE product_handle.cpp LIBRARIES
         phlex::core_internal
)
cet_test(product_matcher USE_CATCH2_MAIN SOURCE product_matcher.cpp LIBRARIES
         phlex::model_internal
)
cet_test(product_store USE_CATCH2_MAIN SOURCE product_store.cpp LIBRARIES
         phlex::core_internal
)
cet_test(
  fold
  USE_CATCH2_MAIN
  SOURCE
  fold.cpp
  LIBRARIES
  phlex::core_internal
  spdlog::spdlog
  layer_generator_internal
)
cet_test(
  repeater_node
  USE_CATCH2_MAIN
  SOURCE
  repeater_node_test.cpp
  LIBRARIES
  phlex::core_internal
)
cet_test(
  replicated
  USE_CATCH2_MAIN
  SOURCE
  replicated.cpp
  LIBRARIES
  TBB::tbb
  phlex::utilities_internal
  spdlog::spdlog
)
cet_test(
  product_querying
  USE_CATCH2_MAIN
  SOURCE
  product_querying.cpp
  LIBRARIES
  phlex::core
  layer_generator
  Boost::json
  fmt::fmt
)
cet_test(product_query USE_CATCH2_MAIN SOURCE product_query.cpp LIBRARIES
         phlex::core_internal
)
cet_test(core_misc_test USE_CATCH2_MAIN SOURCE core_misc_test.cpp LIBRARIES
         phlex::core_internal
         Boost::json
)
cet_test(
  provider_test
  USE_CATCH2_MAIN
  SOURCE
  provider_test.cpp
  LIBRARIES
  phlex::core_internal
  layer_generator_internal
)
cet_test(
  type_distinction
  USE_CATCH2_MAIN
  SOURCE
  type_distinction.cpp
  LIBRARIES
  spdlog::spdlog
  phlex::core_internal
  layer_generator_internal
)
cet_test(
  unfold
  USE_CATCH2_MAIN
  SOURCE
  unfold.cpp
  LIBRARIES
  Boost::json
  phlex::core_internal
  TBB::tbb
  spdlog::spdlog
  layer_generator_internal
)

add_subdirectory(benchmarks)

add_subdirectory(max-parallelism)
add_subdirectory(memory-checks)
add_subdirectory(plugins)
add_subdirectory(utilities)
add_subdirectory(mock-workflow)
add_subdirectory(demo-giantdata)
add_subdirectory(python)
add_subdirectory(tbb-preview)

if(PHLEX_USE_FORM)
  add_subdirectory(form)
endif()
