cet_make_library(
  LIBRARY_NAME
  phlex_core
  SHARED
  SOURCE
  concurrency.cpp
  consumer.cpp
  declared_fold.cpp
  declared_observer.cpp
  declared_output.cpp
  declared_predicate.cpp
  declared_transform.cpp
  declared_unfold.cpp
  detail/make_algorithm_name.cpp
  detail/maybe_predicates.cpp
  detail/filter_impl.cpp
  detail/repeater_node.cpp
  edge_creation_policy.cpp
  edge_maker.cpp
  filter.cpp
  framework_graph.cpp
  glue.cpp
  message.cpp
  node_catalog.cpp
  index_router.cpp
  products_consumer.cpp
  provider_node.cpp
  registrar.cpp
  registration_api.cpp
  product_query.cpp
  store_counters.cpp
  LIBRARIES
  PUBLIC
  TBB::tbb
  phlex::metaprogramming
  phlex::model
  phlex::utilities
  PRIVATE
  Boost::json
  spdlog::spdlog
)
install(
  FILES
    concepts.hpp
    consumer.hpp
    declared_fold.hpp
    declared_observer.hpp
    declared_output.hpp
    declared_predicate.hpp
    declared_transform.hpp
    declared_unfold.hpp
    edge_creation_policy.hpp
    edge_maker.hpp
    filter.hpp
    framework_graph.hpp
    fwd.hpp
    glue.hpp
    graph_proxy.hpp
    input_arguments.hpp
    message.hpp
    multilayer_join_node.hpp
    index_router.hpp
    node_catalog.hpp
    product_query.hpp
    products_consumer.hpp
    provider_node.hpp
    registrar.hpp
    registration_api.hpp
    store_counters.hpp
    upstream_predicates.hpp
  DESTINATION include/phlex/core
)
install(FILES fold/send.hpp DESTINATION include/phlex/core/fold)
install(
  FILES
    detail/filter_impl.hpp
    detail/make_algorithm_name.hpp
    detail/maybe_predicates.hpp
    detail/repeater_node.hpp
  DESTINATION include/phlex/core/detail
)
target_include_directories(phlex_core PRIVATE ${PROJECT_SOURCE_DIR})
phlex_apply_symbol_visibility(phlex_core)
phlex_apply_optimizations(phlex_core)

# AppleClang 15.0 still treats std::views::join as experimental
if(
  CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang"
  AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL "14.5"
)
  target_compile_options(phlex_core PRIVATE "-fexperimental-library")
endif()

phlex_make_internal_library(
  phlex_core
  LIBRARIES
  PUBLIC TBB::tbb phlex::metaprogramming phlex_model_internal phlex_utilities_internal
  PRIVATE Boost::json spdlog::spdlog
)
add_library(phlex::core_internal ALIAS phlex_core_internal)

# Interface library
cet_make_library(
  LIBRARY_NAME
  phlex_core_int
  EXPORT_NAME
  core
  INTERFACE
  NO_SOURCE
  LIBRARIES
  phlex_core
  phlex::metaprogramming
  phlex::model
  phlex::utilities
  Boost::json
  TBB::tbb
)
